--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport" >
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" href="./blueicon.ico">
     <script src="./coi-serviceworker.js"></script>
     <style>
         body, html { 
@@ -24,25 +24,19 @@
             font-size: 18px;
             white-space: nowrap;
         }
-
-        canvas {
-            display: block;
-            margin: 20px auto;
-        }
     </style>
 
 </head>
 <body title="146.853.146.838 ops/sec">    
-<canvas id="bitmaprenderer" width="256" height="256" ></canvas>
+<canvas id="viewport"></canvas>
 
 <script src="3dtr.js">
 
-    function numberWithCommas(x) {
-        var parts = x.toString().split(".");
-        parts[0] = parts[0].replace(/\B(?=(\d{3})+(?!\d))/g, ".");
-        return parts.join(".");
-    }
+    //let canvas = document.getElementById("viewport");
 
+    //console.log(canvas);
+
+    /*
     const offscreen = new OffscreenCanvas(256, 256);
     const gl = offscreen.getContext("webgl2");
 
@@ -64,7 +58,7 @@
     });
   
     log({ offscreen, gl });
-
+    */
 
 </script>
 </body>
