--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     //let canvas = document.getElementById("viewport");
 
-    //console.log(canvas);
+    log( document );
 
     /*
     const offscreen = new OffscreenCanvas(256, 256);
